--- a/Main.storyboard
+++ b/Main.storyboard
@@ -1,30 +1,136 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="JqI-mq-Xzf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="jXv-N6-QBy">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Grace's To-Do List-->
+        <scene sceneID="ges-8a-wS2">
+            <objects>
+                <tableViewController id="uyV-Ft-AJN" customClass="ToDoListTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="aEj-00-71R">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ListPrototypeCell" textLabel="dE0-lc-LyB" style="IBUITableViewCellStyleDefault" id="Atx-Gd-cnK">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Atx-Gd-cnK" id="VGu-gM-frc">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Eat Hot Pot" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dE0-lc-LyB">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <sections/>
+                        <connections>
+                            <outlet property="dataSource" destination="uyV-Ft-AJN" id="53o-qC-anc"/>
+                            <outlet property="delegate" destination="uyV-Ft-AJN" id="52I-mo-q7J"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Grace's To-Do List" id="Zey-SX-kbb">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Zt5-tQ-pQx">
+                            <connections>
+                                <segue destination="xEH-D3-9iK" kind="modal" id="kd9-a6-gS2"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VTQ-LZ-hj5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="571" y="268"/>
+        </scene>
+        <!--Add To-Do Item-->
         <scene sceneID="1ZL-AY-L6C">
             <objects>
-                <viewController id="JqI-mq-Xzf" sceneMemberID="viewController">
+                <viewController id="JqI-mq-Xzf" customClass="AddToDoItemViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VId-qR-c0M"/>
+                        <viewControllerLayoutGuide type="bottom" id="Rlg-nS-Sa0"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="pd7-Sy-5gB">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="New to-do item" minimumFontSize="17" id="IOp-kF-qRY">
-                                <rect key="frame" x="16" y="102" width="288" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="New to-do item" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IOp-kF-qRY">
+                                <rect key="frame" x="16" y="107" width="288" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="IOp-kF-qRY" secondAttribute="centerX" id="9fu-6Y-pxS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="IOp-kF-qRY" secondAttribute="trailing" constant="280" id="OPI-8A-ueE"/>
+                            <constraint firstAttribute="centerX" secondItem="IOp-kF-qRY" secondAttribute="centerX" id="TwW-hC-w0N"/>
+                            <constraint firstItem="IOp-kF-qRY" firstAttribute="top" secondItem="VId-qR-c0M" secondAttribute="bottom" constant="87" id="Vag-et-if0"/>
+                            <constraint firstItem="IOp-kF-qRY" firstAttribute="trailing" secondItem="pd7-Sy-5gB" secondAttribute="trailingMargin" id="fGG-bk-CqI"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Add To-Do Item" id="0ma-Wr-fLB">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="KjY-oD-cqB">
+                            <connections>
+                                <segue destination="i5h-JJ-CHR" kind="unwind" unwindAction="unwindToList:" id="Csn-Pf-Pdi"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="rX4-T5-VgI">
+                            <connections>
+                                <segue destination="i5h-JJ-CHR" kind="unwind" unwindAction="unwindToList:" id="YKq-Ko-tT7"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="saveButton" destination="rX4-T5-VgI" id="ksb-t4-esd"/>
+                        <outlet property="textField" destination="IOp-kF-qRY" id="h9q-cW-Heo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bxl-Ii-C5d" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="i5h-JJ-CHR" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="299" y="355"/>
+            <point key="canvasLocation" x="1579" y="284"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="dPs-Yx-Rlu">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jXv-N6-QBy" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hIA-KQ-ylW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="uyV-Ft-AJN" kind="relationship" relationship="rootViewController" id="LcA-Nc-zdF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WH3-Vt-IcW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="39" y="268"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Nxc-mh-UXR">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xEH-D3-9iK" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="G6f-Mw-eM0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="JqI-mq-Xzf" kind="relationship" relationship="rootViewController" id="kHd-EO-dYJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BtM-BI-ID5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1047" y="284"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
